--- a/pricing.html
+++ b/pricing.html
@@ -73,7 +73,8 @@
                 
                 <li class="nav-item"><a class="nav-link" href="contact.html"> Contact Us</a></li>
               </ul>
-              <a class="btn btn-primary GetQuote" id="GetQuote" data-toggle="modal" href="./quotes.html" data-target="#theModal">Get Quote</a>
+              <!--<a class="btn btn-primary GetQuote" id="GetQuote" data-toggle="modal" href="./quotes.html" data-target="#theModal">Get Quote</a>-->
+            <a class="btn btn-primary GetQuote" id="GetQuote" href="./quotation.html">Get Quote</a>
             </div>
           </nav>
         </div>
@@ -99,16 +100,15 @@
       <div class="col-lg-4">
         <div class="plan wow fadeInUp">
           <div class="plan-price">
-            <h3>Basic</h3>
-            <span class="value">Free</span> <span class="period">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span> </div>
+            <h3>Residence</h3>
+            <span class="value">₦18,000.00</span> <span class="period">Pay as low as ₦18,000.00 for your residential service needs.</span> </div>
           <div class="plan-features">
             <ul>
-              <li>One Listing</li>
-              <li>30 Days Availability</li>
-              <li>Standard Listing</li>
-              <li>Limited Support</li>
+              <li>Event Centre & Hall</li>
+              <li>Bedroom Apartment</li>
+              <li>Warehouse</li>
             </ul>
-            <div class="readmore"><a href="#">Get Started</a></div>
+            <div class="readmore"><a href="quotation.html">Get Started</a></div>
           </div>
         </div>
       </div>
@@ -117,17 +117,16 @@
       <div class="col-lg-4">
         <div class="plan featured wow fadeInUp">
           <div class="plan-price">
-            <h3>Extended</h3>
-            <span class="value">$9.99</span> <span class="period">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span> </div>
+            <h3>Commercial</h3>
+            <span class="value">₦25,000.00</span> <span class="period">Get as low as ₦25,000.00 for your business premise cleanup</span> </div>
           <div class="plan-features">
-            <ul>
-              <li>One Time Fee</li>
-              <li>One Listing</li>
-              <li>90 Days Availability</li>
-              <li>Featured In Search Results</li>
-              <li>24/7 Support</li>
+            <ul> 
+              <li>Pest Management Services</li>
+              <li>Lawn & Drainages</li>
+              <li>Leather Sofa Cleaning</li>
+              <li>24/7 Service</li>
             </ul>
-            <div class="readmore"><a href="#">Get Started</a></div>
+            <div class="readmore"><a href="quotation.html">Get Started</a></div>
           </div>
         </div>
       </div>
@@ -136,16 +135,18 @@
       <div class="col-lg-4">
         <div class="plan wow fadeInUp">
           <div class="plan-price">
-            <h3>Professional</h3>
-            <span class="value">$19.99</span> <span class="period">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span> </div>
+            <h3>Special Service</h3>
+            <span class="value"></span> <span class="period">Call us for special service needs</span> </div>
           <div class="plan-features">
+            <!--
             <ul>
               <li>Unlimited Listings</li>
               <li>Unlimited Availability</li>
               <li>Featured In Search Results</li>
               <li>24/7 Support</li>
             </ul>
-            <div class="readmore"><a href="#">Get Started</a></div>
+          -->
+            <div class="readmore"><a href="quotation.html">Get Started</a></div>
           </div>
         </div>
       </div>
