--- a/upholstery.html
+++ b/upholstery.html
@@ -74,7 +74,8 @@
               
               <li class="nav-item"><a class="nav-link" href="contact.html"> Contact Us</a></li>
             </ul>
-            <a class="btn btn-primary GetQuote" id="GetQuote" data-toggle="modal" href="./quotes.html" data-target="#theModal">Get Quote</a>
+            <!--<a class="btn btn-primary GetQuote" id="GetQuote" data-toggle="modal" href="./quotes.html" data-target="#theModal">Get Quote</a>-->
+            <a class="btn btn-primary GetQuote" id="GetQuote" href="./quotation.html">Get Quote</a>
           </div>
         </nav>
       </div>
