--- a/about.html
+++ b/about.html
@@ -19,6 +19,11 @@
 <link rel="stylesheet" type="text/css" href="css/jquery.fancybox.min.css" media="screen" />
 <link rel="stylesheet" href="rs-plugin/css/settings.css">
 <link href="css/style.css" rel="stylesheet">
+<style>
+  ol{
+    list-style: square;
+  }
+</style>
 <title>Clean N Classy</title>
 </head>
 <body>
@@ -114,22 +119,22 @@
             <p>We believe cleanliness and safety facilitate productivity in the office and personal space. This, solely, is our goal and we are committed to it.</p>
             <div class="title">
               <h3>Vision</h3></div>
-              <p>To be the most preferred and trusted partner for all cleaning, <br> facility maintenance and pest control service needs in Africa</p>
+              <p>To be the most preferred and trusted partner for all cleaning, facility maintenance and pest control service needs in Africa</p>
               <div class="title">
               <h3>Mission</h3></div>
-              <p>To deliver world-class cleaning, pest management, and facility maintenance <br> services through professionalism and innovations 
+              <p>To deliver world-class cleaning, pest management, and facility maintenance services through professionalism and innovations 
                 that provide sustainable and exceptional customer relation experience</p>
                 <div class="title">
                   <h3>Core values</h3></div>
                 <p>At the heart of our business operations, we hold these values dear:</p>
-              <ul class="">
+              <ol class="">
               <li>Teamwork</li>
               <li>Integrity</li>
               <li>Innovation</li>
               <li>Professionalism</li>
               <li>Exceptional customer relation</li>
               <li>Reliability</li>
-            </ul>
+            </ol>
           </div>
         </div>
       </div>
