--- a/quotation.html
+++ b/quotation.html
@@ -28,8 +28,9 @@
     margin-top: 10px;
   }
   .nav>li>a.active{    
-    background: #FFFFFF !important;
-    color: black;
+    /*background: #FFFFFF !important;*/
+    background: #042189 !important;
+    /*color: black;*/
   }
   .nav>li>a.active:hover {
       background-color: #1890D5 !important;
@@ -48,7 +49,8 @@
     
     /*   Change Color for Inactive Tabs     */
     .nav-tabs>li>a {
-      background-color: #042189;
+      /*background-color: #042189;*/
+      background-color: #38B6FF;
       border-color: #FFFFFF;
       color: #FFFFFF;
       height: 100px;
