--- a/index.html
+++ b/index.html
@@ -295,25 +295,25 @@
 
 <div class="col-lg-4 col-md-4">
 <div class="form-group">
-    <input type="text" name="name" class="form-control " placeholder="Your Name">
+    <input type="text" name="Customer Name" class="form-control " placeholder="Your Name">
 </div>
 </div>
 
 <div class="col-lg-4 col-md-4">
 <div class="form-group">
-    <input type="email" name="email" class="form-control" placeholder="Your Email">
+    <input type="email" name="Email Address" class="form-control" placeholder="Your Email">
 </div>
 </div>
 
 <div class="col-lg-4 col-md-4">
 <div class="form-group">
-    <input type="text" name="Phone No" class="form-control"placeholder="Your Phone">
+    <input type="text" name="Phone Number" class="form-control"placeholder="Your Phone">
   </div>
 </div>
 
 <div class="col-lg-4 col-md-4">
 <div class="form-group">
-    <input type="text" name="address" class="form-control" placeholder="Your Address"></div>
+    <input type="text" name="Customer Address" class="form-control" placeholder="Your Address"></div>
 </div>
 
 <div class="col-lg-4 col-md-4">
@@ -335,7 +335,7 @@
 
 <div class="col-lg-4 col-md-4">
 <div class="form-group">
-    <input type="date" name="date" class="form-control"placeholder="Date">
+    <input type="date" name="Other Information" class="form-control"placeholder="Date">
   </div>
 </div>
 
