--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <!-- Jquery Fancybox CSS -->
 <link rel="stylesheet" type="text/css" href="css/jquery.fancybox.min.css" media="screen" />
 <link rel="stylesheet" href="rs-plugin/css/settings.css">
+<link href="./css/toastr.min.css" rel="stylesheet" />
 <link href="css/style.css" rel="stylesheet" />
 <style>
   ol{
@@ -112,7 +113,7 @@
       </li>
 
       <li data-slotamount="7" data-transition="slotzoom-horizontal" data-masterspeed="1000" data-saveperformance="on"> <img alt="" alt="" src="images/dummy.png" data-lazyload="images/pestcontrol/pest9.png">
-        <div class="caption lft large-title tp-resizeme slidertext_hover" data-x="left" data-y="180" data-speed="600" data-start="1600">Welcome to Clean N Cleaning</div>
+        <div class="caption lft large-title tp-resizeme slidertext_hover" data-x="left" data-y="180" data-speed="600" data-start="1600">Welcome to Clean N Classy</div>
         <div class="caption lft large-title tp-resizeme slidertext2" data-x="left" data-y="190" data-speed="600" data-start="2200">Pest Control</div>
         <div class="caption lfb large-title tp-resizeme slidertext3" data-x="left" data-y="310" data-speed="600" data-start="2800">We are committed to keeping you happy/satisfied with our all-round cleaning and<br/> pest control services.</div>
         <div class="caption lfb large-title tp-resizeme slidertext4 slider_btn" data-x="left" data-y="400" data-speed="600" data-start="3500"><a href="pest.html">Learn More </a></div>
@@ -122,7 +123,7 @@
       <li data-slotamount="7" data-transition="slotzoom-horizontal" data-masterspeed="1000" data-saveperformance="on"> <img alt="" alt="" src="images/dummy.png" data-lazyload="images/pestcontrol/sofa.jpg">
         <div class="caption lft large-title tp-resizeme slidertext_hover" data-x="left" data-y="180" data-speed="600" data-start="1600">Welcome to Clean N Classy</div>
         <div class="caption lft large-title tp-resizeme slidertext2" data-x="left" data-y="190" data-speed="600" data-start="2200">Carpet, Sofa and Upholstery</div>
-        <div class="caption lfb large-title tp-resizeme slidertext3" data-x="left" data-y="310" data-speed="600" data-start="2800">Innovation is imbued in our processes.Enjoy hassle-free cleaning,<br> laundry and pest control services suited for you.<br/></div>
+        <div class="caption lfb large-title tp-resizeme slidertext3" data-x="left" data-y="310" data-speed="600" data-start="2800">Innovation is imbued in our processes. Enjoy hassle-free cleaning,<br> laundry and pest control services suited for you.<br/></div>
         <div class="caption lfb large-title tp-resizeme slidertext4 slider_btn" data-x="left" data-y="400" data-speed="600" data-start="3500"><a href="upholstery.html">Learn More </a></div>
         <div class="caption lfb large-title tp-resizeme slidertext4" data-x="240" data-y="400" data-speed="600" data-start="4100"><a href="contact.html">Contact Us </a></div>
       </li>
@@ -434,6 +435,7 @@
             <ul class="footer-adress">
               <li class="footer_address"> <i class="fas fa-map-signs"></i> <span>116 Lagos Road, Haruna, Lagos, Nigeria</span> </li>
               <li class="footer_email"> <i class="fas fa-envelope" aria-hidden="true"></i> <span><a href="mailto:info@cleanclassy.com"> info@cleanclassy.com</a></span> </li>
+              <li class="footer_phone"> <i class="fas fa-phone-alt"></i> <span><a href="tel:+23414545108"> +23414545108</a></span> </li>
               <li class="footer_phone"> <i class="fas fa-phone-alt"></i> <span><a href="tel:+2348051730803"> +2348051730803</a></span> </li>
             </ul>
             <div class="social-icons footer_icon">
@@ -441,7 +443,8 @@
                 <li><a href="https://web.facebook.com/cleanclassyng/?_rdc=1&_rdr"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
                 <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
                 <li><a href="https://www.instagram.com/cleanclassyng/"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fab fa-youtube" aria-hidden="true"></i></a></li>
+                <li><a href="https://api.whatsapp.com/send/?phone=08051730803"><i class="fab fa-whatsapp" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.linkedin.com/company/cleanclassyng"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
               </ul>
             </div>
           </div>
@@ -486,6 +489,7 @@
 <script src="js/animate.js"></script> 
 <script src="js/jquery.nice-select.js"></script> 
 <script src="js/jquery.flexslider.js"></script> 
+<script src="js/toastr.min.js"></script>
 <script>
   new WOW().init();
 </script> 
