--- a/construction.htm
+++ b/construction.htm
@@ -100,7 +100,7 @@
 <div class="about-wrap" id="about">
     <div class="row">
       <div class="col-lg-6">
-        <div class="aboutImg"><img src="images/construction.jpg" alt=""></div>
+        <div class="aboutImg"><img src="images/Construction.jpg" alt=""></div>
       </div>
       <div class="col-lg-6">
         <div class="about_box">
