--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
           <div>
             <h2>Vision</h2>
           </div>
-            <p>To be the most preferred and trusted partner for all cleaning, <br> facility maintenance and pest control service needs in Africa</p>
+            <p>To be the most preferred and trusted partner for all cleaning, facility maintenance and pest control service needs in Africa</p>
             <div>
             <h2>Mission</h2>
           </div>
-            <p>To deliver world-class cleaning, pest management, and facility maintenance <br> services through professionalism and innovations 
+            <p>To deliver world-class cleaning, pest management, and facility maintenance services through professionalism and innovations 
               that provide sustainable and exceptional customer relation experience</p>
               <div>
                 <h2>Core values</h2>
