--- a/commercial.html
+++ b/commercial.html
@@ -163,6 +163,7 @@
             <ul class="footer-adress">
               <li class="footer_address"> <i class="fas fa-map-signs"></i> <span>116 Lagos Road, Haruna, Lagos, Nigeria</span> </li>
               <li class="footer_email"> <i class="fas fa-envelope" aria-hidden="true"></i> <span><a href="mailto:info@cleanclassy.com"> info@cleanclassy.com</a></span> </li>
+              <li class="footer_phone"> <i class="fas fa-phone-alt"></i> <span><a href="tel:+23414545108"> +23414545108</a></span> </li>
               <li class="footer_phone"> <i class="fas fa-phone-alt"></i> <span><a href="tel:+2348051730803"> +2348051730803</a></span> </li>
             </ul>
             <div class="social-icons footer_icon">
@@ -170,7 +171,8 @@
                 <li><a href="https://web.facebook.com/cleanclassyng/?_rdc=1&_rdr"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
                 <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
                 <li><a href="https://www.instagram.com/cleanclassyng/"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fab fa-youtube" aria-hidden="true"></i></a></li>
+                <li><a href="https://api.whatsapp.com/send/?phone=08051730803"><i class="fab fa-whatsapp" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.linkedin.com/company/cleanclassyng"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
               </ul>
             </div>
           </div>
@@ -182,7 +184,7 @@
               <div class="input-group">
                 <input type="text" class="form-control" name="search" placeholder="Your Email Address">
               </div>
-              <input type="submit" class="sigup" value="Subscribe">
+              <input type="button" class="btn btn-primary" value="Subscribe">
             </form>
           </div>
         </div>
