--- a/laundry.html
+++ b/laundry.html
@@ -188,22 +188,20 @@
 
 <!--Footer Start-->
 <footer class="footer bg-style wow fadeInUp bg_img" data-overlay="6">
+  <h4 class="callText text-center">You will be satisfied with every service you need</h4>
+  <h4 class="callText text-center">Call us! we are available 24/7</h4>
   <div class="container">
     <div class="footer-upper">
       <div class="row" >
-
         <div class="col-lg-3 col-md-3">
           <div class="footer-widget quick-links">
             <h3 class="title">Services</h3>
             <ul>
-              <li><a href="#."> Cleaning Services</a> </li>
-<li><a href="commercial.html">commercial cleaning</a> </li>
-<li><a href="construction.htm">Post Construction cleaning</a> </li>
-<li><a href="upholstery.html">Carpet, Sofa and Upholstery Cleaning</a> </li>
-<li><a href="tenacy.html">End of Tenancy </a> </li>
-<li><a href="pest.html">Pest Control </a> </li>
-<li><a href="laundry.html">Laundry and Dry-cleaning </a> </li>
-            </ul>
+              <li><a href="construction.htm">Post Construction cleaning</a> </li>
+              <li><a href="upholstery.html">Carpet, Sofa and Upholstery Cleaning</a> </li>
+              <li><a href="tenacy.html">End of Tenancy </a> </li>
+              <li><a href="pest.html">Pest Control </a> </li>
+              <li><a href="laundry.html">Laundry and Dry-cleaning </a> </li>
           </div>
         </div>
         <div class="col-lg-2 col-md-3">
@@ -211,7 +209,6 @@
             <h3 class="title">Quick links</h3>
             <ul>
               <li><a href="index.html"> Home</a> </li>
-              <li><a href="services.html"> services</a> </li>
               <li><a href="about.html"> About Us</a> </li>
               <li><a href="gallery.html"> Gallery</a> </li>
               <li><a href="blog.html"> Blog</a> </li>
@@ -227,6 +224,7 @@
             <ul class="footer-adress">
               <li class="footer_address"> <i class="fas fa-map-signs"></i> <span>116 Lagos Road, Haruna, Lagos, Nigeria</span> </li>
               <li class="footer_email"> <i class="fas fa-envelope" aria-hidden="true"></i> <span><a href="mailto:info@cleanclassy.com"> info@cleanclassy.com</a></span> </li>
+              <li class="footer_phone"> <i class="fas fa-phone-alt"></i> <span><a href="tel:+23414545108"> +23414545108</a></span> </li>
               <li class="footer_phone"> <i class="fas fa-phone-alt"></i> <span><a href="tel:+2348051730803"> +2348051730803</a></span> </li>
             </ul>
             <div class="social-icons footer_icon">
@@ -234,7 +232,8 @@
                 <li><a href="https://web.facebook.com/cleanclassyng/?_rdc=1&_rdr"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
                 <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
                 <li><a href="https://www.instagram.com/cleanclassyng/"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fab fa-youtube" aria-hidden="true"></i></a></li>
+                <li><a href="https://api.whatsapp.com/send/?phone=08051730803"><i class="fab fa-whatsapp" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.linkedin.com/company/cleanclassyng"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
               </ul>
             </div>
           </div>
@@ -246,11 +245,12 @@
               <div class="input-group">
                 <input type="text" class="form-control" name="search" placeholder="Your Email Address">
               </div>
-              <input type="button" class="btn btn-primary" id="subscribe" value="Subscribe">
+              <input type="button" class="btn btn-primary" value="Subscribe">
             </form>
           </div>
         </div>
       </div>
+      
  </div>
   </div>
 <div class="copyright">Copyright © 2021 Clean N Classy. All rights reserved</div>
