--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,36 @@
 <link rel="stylesheet" type="text/css" href="css/jquery.fancybox.min.css" media="screen" />
 <link rel="stylesheet" href="rs-plugin/css/settings.css">
 <link href="css/style.css" rel="stylesheet">
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-105850104-1"></script>
+
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments)
+    };
+
+    gtag('js', new Date());
+
+    gtag('config', 'UA-105850104-1');
+</script>
+<script>
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-108336246-1', 'auto');
+    ga('send', 'pageview');
+</script>
 <title>Clean N Classy</title>
 </head>
 <body>
@@ -271,5 +301,30 @@
 <!-- general script file --> 
 <script src="js/wow.js"></script> 
 <script src="js/script.js"></script>
+<script type='text/javascript'>
+  var onWebChat = {
+      ar: [],
+      set: function(a, b) {
+          if (typeof onWebChat_ === 'undefined') {
+              this.ar.
+              push([a, b]);
+          } else {
+              onWebChat_.set(a, b);
+          }
+      },
+      get: function(a) {
+          return (onWebChat_.get(a));
+      },
+      w: (function() {
+          var ga = document.createElement('script');
+          ga.type = 'text/javascript';
+          ga.
+          async = 1;
+          ga.src = '//www.onwebchat.com/clientchat/6ce9458823abc2acc448eec99cd8d20d/1/1';
+          var s = document.getElementsByTagName('script')[0];
+          s.parentNode.insertBefore(ga, s);
+      })()
+  }
+</script>
 </body>
 </html>
