--- a/pricing.html
+++ b/pricing.html
@@ -166,8 +166,15 @@
         <div class="plan wow fadeInUp">
           <div class="plan-price">
             <h3>Special Service</h3>
-            <span class="value"></span> <span class="period">Call us for special service needs</span> </div>
+            <span class="period"> Got a special request?</span>
+                      </div>
           <div class="plan-features">
+            <p> <span class="period">Here at Clean N Classy, we understand one size doesn't fit all.</span></p>
+
+                     <p>
+                      <span class="value"></span>
+                      <span class="period">Whatever your business, organization/sector or personal needs are, we'll adapt our services to match it. We will discuss your requirements, design the perfect specification and deliver the very best service in tune with best practices. 
+                       </span>.</p> 
             <!--
             <ul>
               <li>Unlimited Listings</li>
@@ -233,7 +240,7 @@
             <div class="social-icons footer_icon">
               <ul>
                 <li><a href="https://web.facebook.com/cleanclassyng/?_rdc=1&_rdr"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a href="https://twitter.com/cleanclassyng"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
                 <li><a href="https://www.instagram.com/cleanclassyng/"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
                 <li><a href="https://api.whatsapp.com/send/?phone=2348051730803"><i class="fab fa-whatsapp" aria-hidden="true"></i></a></li>
                 <li><a href="https://www.linkedin.com/company/cleanclassyng"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
@@ -336,7 +343,7 @@
             <div class="social-icons footer_icon">
               <ul>
                 <li><a href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a href="https://twitter.com/cleanclassyng"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
                 <li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
                 <li><a href="#"><i class="fab fa-youtube" aria-hidden="true"></i></a></li>
               </ul>
