--- a/services.html
+++ b/services.html
@@ -30,7 +30,7 @@
       <div class="col-lg-6 col-md-4">
         <ul class="social_media style_none">
           <li><a href="https://web.facebook.com/cleanclassyng/?_rdc=1&_rdr"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+          <li><a href="https://twitter.com/cleanclassyng"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
           <li><a href="https://www.instagram.com/cleanclassyng/"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
           <li><a href="#"><i class="fab fa-youtube" aria-hidden="true"></i></a></li>
         </ul>
@@ -291,7 +291,7 @@
             <div class="social-icons footer_icon">
               <ul>
                 <li><a href="https://web.facebook.com/cleanclassyng/?_rdc=1&_rdr"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a href="https://twitter.com/cleanclassyng"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
                 <li><a href="https://www.instagram.com/cleanclassyng/"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
                 <li><a href="https://api.whatsapp.com/send/?phone=2348051730803"><i class="fab fa-whatsapp" aria-hidden="true"></i></a></li>
                 <li><a href="https://www.linkedin.com/company/cleanclassyng"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
