--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="caption lft large-title tp-resizeme slidertext_hover" data-x="left" data-y="180" data-speed="600" data-start="1600">Welcome to Clean N Classy</div>
         <div class="caption lft large-title tp-resizeme slidertext2" data-x="left" data-y="190" data-speed="600" data-start="2200">Commercial Cleaning</div>
         <div class="caption lfb large-title tp-resizeme slidertext3" data-x="left" data-y="310" data-speed="600" data-start="2800">You come first always, we are ready to attend to your needs with detailed attention<br/> and professionalism.
-          You have found your one-stop place for all your laundry and dry-cleaning needs,<br/> we got you covered.</div>
+          You have found your one-stop place for all your laundry and<br/> dry-cleaning needs, we got you covered.</div>
         <div class="caption lfb large-title tp-resizeme slidertext4 slider_btn" data-x="left" data-y="400" data-speed="600" data-start="3500"><a href="commercial.html">Learn More </a></div>
         <div class="caption lfb large-title tp-resizeme slidertext4" data-x="240" data-y="400" data-speed="600" data-start="4100"><a href="contact.html">Contact Us </a></div>
       </li>
@@ -184,7 +184,7 @@
                 <h2>Core values</h2>
               </div>
               <p>At the heart of our business operations, we hold these values dear:</p>
-            <ol>
+            <ol style="margin-left: 10%;">
               <li>Teamwork</li>
               <li>Integrity</li>
               <li>Innovation</li>
