--- a/index.html
+++ b/index.html
@@ -171,6 +171,10 @@
       </div>
       <div class="col-lg-6">
         <div class="about_box">
+          <p>With over 10 years doing what we know best to do, we pride ourselves on delivering nothing short of industry standard. Our highly skilled personnel will always get the job done through our professional services in domestic cleaning, commercial cleaning, pest control and laundry services.</p>
+          <p>While we ensure to put your needs at the centre of our offerings, innovation is imbued in our processes as we strive to always give you a wholesome experience and quality service.</p>
+          <p>No doubt! you come first always, and we are ready to attend to your needs with detailed attention while you enjoy hassle-free cleaning, laundry and pest control services well suited for you. Whatever your needs may be, we have got you covered.</p>
+          <!--
           <div>
             <h2>Vision</h2>
           </div>
@@ -192,6 +196,7 @@
               <li>Exceptional customer relation</li>
               <li>Reliability</li>
             </ol>
+          -->
         </div>
       </div>
     </div>
