--- a/pest.html
+++ b/pest.html
@@ -22,7 +22,12 @@
 <link href="css/style.css" rel="stylesheet">
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105850104-1"></script>
-
+<style>
+  ol{
+    list-style: square;
+    font-size: 14px;
+  }
+</style>
 <script>
     window.dataLayer = window.dataLayer || [];
 
@@ -145,15 +150,16 @@
             <br>Our eco-friendly pest control solutions ensure that you and the environment are not exposed to harmful toxins and chemicals.</p>
             <p>We have the knowledge, expertise and equipment to eradicate pests from different kinds of vicinities. </p>
             <p>Our pest control services are carried out by our team of highly trained experts who through the following pest control processes efficiently annihilate the invasion of pests:</p>
-            <ul class="">
+            <ol style="margin-left: 5%;">
                 <li>Integrated pest management</li>
                 <li>Fumigation</li>
                 <li>Deratisation</li>
                 <li>Roach control</li>
                 <li>Reptile control</li>
                 <li>Insect control (mosquito, ants, flies, termites, bed bugs)</li>
+                <br />
             <p>Consult us <a href="contact.html">here</a> to experience our industry-leading pest control services that protect you from pests and associated health risks.</p>
-              </ul>
+              </ol>
             </div>
         </div>
       </div>
