--- a/pricing.html
+++ b/pricing.html
@@ -174,7 +174,7 @@
                      <p>
                       <span class="value"></span>
                       <span class="period">Whatever your business, organization/sector or personal needs are, we'll adapt our services to match it. We will discuss your requirements, design the perfect specification and deliver the very best service in tune with best practices. 
-                       </span>.</p> 
+                       </span></p> 
             <!--
             <ul>
               <li>Unlimited Listings</li>
