--- a/contact.html
+++ b/contact.html
@@ -129,7 +129,8 @@
       <div class="col-md-4">
           <div class="card"> <img src="./images/locatn.png" width="40">
               <h5>Office Address</h5>
-              <p>116 Lagos Road, Haruna, Lagos, Nigeria</p>
+              <p>116 Lagos Road, Haruna, Lagos, Nigeria <br/>
+                14 Sanusi Akere Street, Oluyole Estate Ibadan, Nigeria</p>
           </div>
       </div>
       <div class="col-md-4">
@@ -239,7 +240,8 @@
           <div class="footer-widget contact">
             <h3 class="title">Contact Info</h3>
             <ul class="footer-adress">
-              <li class="footer_address"> <i class="fas fa-map-signs"></i> <span>116 Lagos Road, Haruna, Lagos, Nigeria</span> </li>
+              <li class="footer_address"> <i class="fas fa-map-signs"></i> <span>116 Lagos Road, Haruna, Lagos, Nigeria <br/>
+                14 Sanusi Akere Street, Oluyole Estate Ibadan, Nigeria</span> </li>
               <li class="footer_email"> <i class="fas fa-envelope" aria-hidden="true"></i> <span><a href="mailto:info@cleanclassy.com"> info@cleanclassy.com</a></span> </li>
               <li class="footer_phone"> <i class="fas fa-phone-alt"></i> <span><a href="tel:+23414545108"> +23414545108</a></span> </li>
               <li class="footer_phone"> <i class="fas fa-phone-alt"></i> <span><a href="tel:+2348051730803"> +2348051730803</a></span> </li>
@@ -248,7 +250,7 @@
               <ul>
                 <li><a href="https://web.facebook.com/cleanclassyng/?_rdc=1&_rdr"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
                 <li><a href="https://twitter.com/cleanclassyng"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-                <li><a href="https://www.instagram.com/cleanclassyng/"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.instagram.com/cleanclassyng_backup/"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
                 <li><a href="https://api.whatsapp.com/send/?phone=2348051730803"><i class="fab fa-whatsapp" aria-hidden="true"></i></a></li>
                 <li><a href="https://www.linkedin.com/company/cleanclassyng"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
               </ul>
